--- a/_posts/2014-7-15-Apps.md
+++ b/_posts/2014-7-15-Apps.md
@@ -1,6 +1,5 @@
-Apps<br>
 <img style="width:25%; height:auto" class="im" src="../images/apps/01-home_connect.jpg">
 <img style="width:25%; height:auto" class="im" src="../images/apps/Screenshot_2014-12-24-00-07-16.png">
 <img style="width:25%; height:auto" class="im" src="../images/apps/Screenshot_2015-03-05-19-21-03.png">
 
-<div class="caption">public apps with cutting edge technologies such as iBeacons, push notifications and live geolocation tracking</div><br>
+Poppy enhance public safety by developing apps with cutting edge technologies such as iBeacons, push notifications and live geolocation tracking
