<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">

--- a/_posts/2019-01-29-Whatsapp.md
+++ b/_posts/2019-01-29-Whatsapp.md
@@ -96,3 +96,5 @@ Qu'en pensez-vous ? Avez-vous d'autres idées ? Tweetez <a href='https://twitter
 
 
 [mis à jour le 14 mars 2019: paragraphes "Objectif et fiabilité" et "Redondance"]
+
+<iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
