--- a/_posts/2019-11-15-zinne.md
+++ b/_posts/2019-11-15-zinne.md
@@ -6,7 +6,7 @@ Poppy est désormais membre du réseau de la [Zinne](https://zinne.brussels), un
 
 En tant qu'acteur de la résilience, il nous paraissait cohérent de jouer le jeu jusqu'au bout. Pour nous, la résilience se construit avant tout à partir de liens entre les personnes, et c'est ce que promeut la Zinne.
 
-Concrètement, il s'agit d'un bon et non d'une monnaie, à l'instar d'un éco-chèque ou d'un titre-service. Bien sûr, et comme pour ces derniers, le principe n'a de sens que s'il est modéré : un territoire doit garder et même améliorer les liens avec l'extérieur. Ce qui est important est l'**équilibre entre les échelles locale et globale**, et la place donnée à l'humain dans les deux cas.
+Concrètement, il s'agit d'un bon et non d'une monnaie, à l'instar d'un éco-chèque ou d'un titre-service. Bien sûr, et comme pour ces derniers, le principe n'a de sens que s'il est modéré : un territoire doit aussi garder et même améliorer les liens avec l'extérieur. Ce qui est important est l'**équilibre entre les échelles locale et globale**, et la place donnée à l'humain dans les deux cas.
 
 La Zinne est actuellement une [recherche-action](https://www.zinne.brussels/etude-recherche/) financée par Innoviris. Il s'agit d'une réflexion à laquelle chacun.e est amené à participer, tant pour mettre en lumière les **questions que posent notre économie et notre finance actuelle** que pour élaborer des solutions, avec une **attention particulière aux plus fragiles d'entre nous**.
 
