--- a/_posts/2019-11-07-qgis_fmn.md
+++ b/_posts/2019-11-07-qgis_fmn.md
@@ -1,5 +1,6 @@
 ---
 title: Fomations à QGIS
+published: false
 ---
 
 À côté des [formations à QGIS que nous donnons régulièrement](https://blog.my-poppy.eu/workshops/), spécifiquement dédiées à la planification d'urgence et à la gestion de crise, il existe plusieurs formations qui mettent l'accent sur des aspects complémentaires, et notamment :
