--- a/_posts/2019-11-14-zinne.md
+++ b/_posts/2019-11-14-zinne.md
@@ -1,5 +1,6 @@
 ---
 title: Résilience locale - Poppy accepte les paiements en Zinne!
+published: false
 ---
 
 Poppy est désormais membre du réseau de la [Zinne](https://zinne.brussels), un bon de soutien à l'économie locale bruxelloise. Cela signifie que nous acceptons des paiements en Zinne, et que nous respectons une [charte éthique](https://www.zinne.brussels/la-charte/). Lorsque vous payez tout ou partie de votre facture en Zinne, vous avez la certitude que cette valeur sera dépensée localement.
