--- a/_posts/2019-10-11-IMDR.md
+++ b/_posts/2019-10-11-IMDR.md
@@ -46,5 +46,7 @@ Alors, en vrac :
 
 Au plaisir d'en discuter avec vous sur Twitter, Facebook, par email ou téléphone, ou encore lors d'un des ateliers que nous organisons !
 
+Cet article vous a été utile ?  <a href='https://paypal.me/ccloquet'>Sponsorisez-le</a> !
+
 <iframe src="https://www.my-poppy.eu/cnt/cnt.php" width="1" height="1" frameBorder="0">
 
