--- a/_posts/2019-10-30-usb_rpi.md
+++ b/_posts/2019-10-30-usb_rpi.md
@@ -1,5 +1,6 @@
 ---
 title: Un PC portable dans votre portefeuille ?
+tags: [tools]
 ---
 
 Vous n'envisagez pas de vous séparer de vos données, et en même temps, vous ne pouvez pas transporter votre PC partout ? Vous avez déjà étudié la piste de l'ultraportable (moins d'1,5 kg), ou de la tablette, et c'est encore trop encombrant ? Vous savez que, où que vous alliez, vous aurez à votre disposition un écran avec une prise HDMI, tel qu'un téléviseur, un projecteur ou un écran de PC, ainsi qu'un clavier et une souris (c'est risqué, mais sait-on jamais) ?
