--- a/_posts/2019-11-04-qgis3_10.md
+++ b/_posts/2019-11-04-qgis3_10.md
@@ -1,6 +1,7 @@
 ---
 title: Mise à jour de QGIS - étiquettes et geoPDF
 published: true
+tags: [tools, qgis, gis]
 ---
 
 Le système d'information géographique <a href='https://www.qgis.org/fr/site/forusers/download.html'>QGIS</a> vient de publier sa version 3.10. Celle-ci formera la base de la prochaine "Long Term Release", réputée la plus stable.
