--- a/_posts/2019-11-28-tools.md
+++ b/_posts/2019-11-28-tools.md
@@ -1,6 +1,7 @@
 ---
 title: Applis ultralégères de collabration en gestion de crise... et au quotidien 
 published: false
+tags: [tools]
 ---
 
 Voici une petite liste d'outils collaboratifs qui peuvent s'avérer utiles en gestion de crise, complémentaires des outils dédiés tels que le [portail national de sécurité](https://centredecrise.be/fr/content/le-portail-de-securite). 
