--- a/_posts/2019-08-01-fournisseurs2019.md
+++ b/_posts/2019-08-01-fournisseurs2019.md
@@ -1,5 +1,6 @@
 ---
 title: Résilience et fournisseurs locaux
+tag:[about us]
 ---
 
 En tant que société de services IT, nous faisons presque inévitablement appel à des services comme Google, Facebook, Amazon ou encore Twitter. Et nous sommes contents de bénéficier des innovations de startups d'un peu partout dans le monde.
