--- a/_posts/2019-10-11-IMDR.md
+++ b/_posts/2019-10-11-IMDR.md
@@ -1,5 +1,6 @@
 ---
 title: « Idées reçues en gestion de crise »  (colloque IMDR)
+tags: [soft skills,conference,complexity]
 ---
 
 Mardi dernier l'[Institut pour la Maîtrise des Risques](https://www.imdr.eu/) organisait un colloque plutôt original sur le sujet des « [idées reçues en gestion de crise](https://www.imdr.eu/offres/gestion/events_818_46997_non-2229/idees-recues-en-gestion-de-crise-etudes-de-cas-interactives.html) », articulé autour des préjugés suivants : 
