--- a/_posts/2016-1-15-iRail.md
+++ b/_posts/2016-1-15-iRail.md
@@ -1,5 +1,6 @@
 ---
 title: What can train travel queries learn us for crowd forecasting?
+tags: [mobility,opendata]
 ---
 Train journey intentions (<a href='http://hello.irail.be'>iRail</a> logs): ten days of queries<br>
 <iframe style='width:100%' src="https://www.youtube.com/embed/-M8pTmlM8xg?html5=1&loop=1&playlist=-M8pTmlM8xg" frameborder="0" allowfullscreen></iframe>
