--- a/_posts/2019-11-04-qgis3_10.md
+++ b/_posts/2019-11-04-qgis3_10.md
@@ -1,5 +1,5 @@
 ---
-title: Mise à jour de QGIS - étiquettes et geoPDF
+title: "Mise à jour de QGIS : étiquettes et geoPDF"
 published: true
 tags: [tools,qgis,gis]
 ---
