--- a/_posts/2019-11-14-zinne.md
+++ b/_posts/2019-11-14-zinne.md
@@ -1,5 +1,5 @@
 ---
-title: Résilience locale - Poppy accepte les paiements en Zinne!
+title: "Résilience locale : Poppy accepte les paiements en Zinne !"
 published: true
 tags: [aboutus]
 ---
