--- a/_posts/2019-11-07-qgis_fmn.md
+++ b/_posts/2019-11-07-qgis_fmn.md
@@ -9,6 +9,7 @@ tags: [tools,qgis,gis,training]
 - ULB : http://cartulb.ulb.be/
 - Fondation rurale de Wallonie : https://www.frw.be/qgis.html
 - Intermezzo (Paris) : https://www.linkedin.com/posts/simongeorget_formation-sig-2019-intermezzo-activity-6605046710236512256-Gt4u
+- Champs Libres (Namur) : https://www.champs-libres.coop/formation-qgis
 
 L'équipe de l'[OSGeo](https://wiki.osgeo.org/wiki/Belgium) peut également vous renseigner à ce sujet, en particulier au travers de leur mailing liste.
 
