--- a/_posts/2021-01-25-pannes-112.md
+++ b/_posts/2021-01-25-pannes-112.md
@@ -1,5 +1,5 @@
 ---
-title: "Pannes du 112 - pistes pour plus de résilience"
+title: "Pannes du 112 - pistes pour plus de resilience"
 published: true
 tags: [112,resilience,HAM,citoyens]
 ---
